--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "2D": true,
   "3D": false,
   "platform": "HTML",
-  "version": "2.0",
-  "wabVersion": "2.10",
-  "author": "Michigan Department of Transportation",
+  "version": "2.0.0",
+  "wabVersion": "2.16",
+  "author": "Liam Welter-Reed, GIS Unit, Michigan Department of Transportation",
   "description": "Convert Route ID and measure to geometry",
   "copyright": "",
   "license": "http://www.apache.org/licenses/LICENSE-2.0",
